// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NVM conversion tests ctrlr_backup_700_7.11.bin 1`] = `
Object {
  "controller": Object {
    "applicationData": "a11d19000200001e3212270efd213a04fa1d00020000000000000000fd39277c022e000100000000000000000199445b8fcb3e537977d642e808b6568700000000000000000000000000000000000000000000008756e008a3cc6f339248ef5d663f50e136e12e8fe7432265349446d6c5541bf3c500be6567027beeb0e7712b11e21ddf53d86f0b134c00a3bdcd24963a89ef0d753a35b3033f64d1b759077a24d59b45da0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "applicationVersion": "7.0.0",
    "commandClasses": Object {
      "includedInsecurely": Array [
        94,
        85,
        86,
        34,
        159,
        152,
        116,
        108,
        138,
      ],
      "includedSecurelyInsecureCCs": Array [],
      "includedSecurelySecureCCs": Array [],
    },
    "controllerConfiguration": 60,
    "dcdcConfig": null,
    "format": 0,
    "homeId": "0xfbfedd24",
    "lastNodeId": 6,
    "lastNodeIdLR": null,
    "maxNodeId": 6,
    "maxNodeIdLR": null,
    "nodeId": 1,
    "primaryLongRangeChannelId": null,
    "protocolVersion": "7.11.0",
    "reservedId": 0,
    "reservedIdLR": null,
    "rfConfig": Object {
      "enablePTI": null,
      "maxTXPower": null,
      "measured0dBm": 3.3,
      "rfRegion": 5,
      "txPower": 0,
    },
    "staticControllerNodeId": 1,
    "sucAwarenessPushNeeded": 0,
    "sucLastIndex": 7,
    "sucUpdateEntries": Array [
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          116,
          115,
          114,
          134,
          108,
          135,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 5,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 6,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          135,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          116,
          115,
          114,
          134,
          108,
          135,
          138,
        ],
      },
    ],
    "systemState": 0,
  },
  "nodes": Object {
    "1": Object {
      "appRouteLock": false,
      "genericDeviceClass": 2,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        6,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 7,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 2,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "2": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": true,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "3": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "4": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "5": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "6": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 0,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
  },
}
`;

exports[`NVM conversion tests ctrlr_backup_700_7.12.bin 1`] = `
Object {
  "controller": Object {
    "applicationData": "a11d19000200001e321b9884fdec8bdd380e00020000000000000000fd8e8c480f1700010000000000000000014c72cc54358f3dc9ce70ac752beb3e7a0000000000000000000000000000000000000000000000873206e7a00af5746fbc07ba927a6bde014d36396481ce9cce689ceba3f12841d85ffcc430bddb814dad5874aa73866b6a1361c9802cac47fc4df1627838f5857eb334b1bb0a8565a09d46bb8e722ac7910000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "applicationVersion": "7.12.0",
    "commandClasses": Object {
      "includedInsecurely": Array [
        94,
        85,
        86,
        34,
        159,
        152,
        116,
        108,
        138,
      ],
      "includedSecurelyInsecureCCs": Array [],
      "includedSecurelySecureCCs": Array [],
    },
    "controllerConfiguration": 60,
    "dcdcConfig": null,
    "format": 1,
    "homeId": "0xd79ed9ef",
    "lastNodeId": 12,
    "lastNodeIdLR": null,
    "maxNodeId": 12,
    "maxNodeIdLR": null,
    "nodeId": 1,
    "primaryLongRangeChannelId": null,
    "protocolVersion": "7.12.0",
    "reservedId": 0,
    "reservedIdLR": null,
    "rfConfig": Object {
      "enablePTI": null,
      "maxTXPower": null,
      "measured0dBm": 3.3,
      "rfRegion": 33,
      "txPower": 0,
    },
    "staticControllerNodeId": 1,
    "sucAwarenessPushNeeded": 0,
    "sucLastIndex": 21,
    "sucUpdateEntries": Array [
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 5,
        "supportedCCs": Array [
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 6,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 7,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 8,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 8,
        "supportedCCs": Array [
          94,
          108,
          85,
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 8,
        "supportedCCs": Array [
          94,
          108,
          85,
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 9,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 10,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 11,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 12,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          85,
          86,
          34,
          159,
          152,
          116,
          108,
          138,
        ],
      },
    ],
    "systemState": 0,
  },
  "nodes": Object {
    "1": Object {
      "appRouteLock": false,
      "genericDeviceClass": 2,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        6,
        8,
        9,
        10,
        11,
        12,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 7,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 12,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "10": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "11": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "12": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "2": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
        8,
        9,
        10,
        11,
        12,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": true,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "3": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
        8,
        9,
        10,
        11,
        12,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "4": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
        8,
        9,
        10,
        11,
        12,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "5": Object {
      "appRouteLock": false,
      "genericDeviceClass": 15,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": false,
      "isVirtual": true,
      "lwr": null,
      "neighbors": Array [
        6,
        8,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 2,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": false,
      "supportsSecurity": false,
    },
    "6": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "8": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "9": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        1,
        2,
        3,
        4,
        5,
      ],
      "nlwr": null,
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
  },
}
`;

exports[`NVM conversion tests ctrlr_backup_700_7.15.bin 1`] = `
Object {
  "controller": Object {
    "applicationData": "0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "applicationVersion": "7.15.4",
    "commandClasses": Object {
      "includedInsecurely": Array [
        94,
        34,
        133,
        112,
        86,
        122,
        114,
        115,
        152,
        85,
        134,
        89,
        90,
        159,
        108,
        116,
      ],
      "includedSecurelyInsecureCCs": Array [],
      "includedSecurelySecureCCs": Array [],
    },
    "controllerConfiguration": 255,
    "dcdcConfig": null,
    "format": 2,
    "homeId": "0xd7db5d96",
    "lastNodeId": 0,
    "lastNodeIdLR": null,
    "maxNodeId": 5,
    "maxNodeIdLR": null,
    "nodeId": 1,
    "primaryLongRangeChannelId": null,
    "protocolVersion": "7.15.4",
    "reservedId": 19,
    "reservedIdLR": null,
    "rfConfig": Object {
      "enablePTI": 0,
      "maxTXPower": 14,
      "measured0dBm": 3.3,
      "rfRegion": 0,
      "txPower": 0,
    },
    "staticControllerNodeId": 1,
    "sucAwarenessPushNeeded": 0,
    "sucLastIndex": 0,
    "sucUpdateEntries": Array [
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          34,
          133,
          112,
          86,
          122,
          114,
          115,
          85,
          134,
          89,
          90,
          108,
          116,
          152,
          159,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [
          37,
          50,
          114,
          134,
          32,
          113,
          112,
          39,
          133,
          135,
          117,
          86,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          94,
          134,
          114,
          89,
          133,
          115,
          113,
          132,
          128,
          48,
          49,
          112,
          152,
          122,
          90,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          94,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          135,
          115,
          128,
          159,
          48,
          112,
          113,
          49,
          132,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          94,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          135,
          115,
          128,
          159,
          48,
          112,
          113,
          49,
          132,
          108,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          94,
          134,
          114,
          89,
          133,
          115,
          113,
          132,
          128,
          48,
          49,
          112,
          122,
          90,
        ],
      },
      Object {
        "changeType": 3,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 3,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 3,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          94,
          85,
          159,
          108,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          94,
          85,
          159,
          108,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          34,
          133,
          112,
          86,
          122,
          114,
          115,
          152,
          85,
          134,
          89,
          90,
          159,
          108,
          116,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [
          94,
          34,
          133,
          112,
          86,
          122,
          114,
          115,
          152,
          85,
          134,
          89,
          90,
          159,
          108,
          116,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 5,
        "supportedCCs": Array [
          94,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          135,
          115,
          128,
          159,
          48,
          112,
          113,
          49,
          132,
          108,
          122,
        ],
      },
      Object {
        "changeType": 3,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          94,
          134,
          114,
          89,
          133,
          115,
          113,
          132,
          128,
          48,
          49,
          112,
          152,
          122,
          90,
        ],
      },
    ],
    "systemState": 0,
  },
  "nodes": Object {
    "1": Object {
      "appRouteLock": false,
      "genericDeviceClass": 2,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        3,
        5,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": true,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 16,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "2": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
        "repeaterNodeIDs": Array [
          3,
        ],
      },
      "neighbors": Array [
        3,
        5,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "3": Object {
      "appRouteLock": false,
      "genericDeviceClass": 33,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        2,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "5": Object {
      "appRouteLock": false,
      "genericDeviceClass": 7,
      "isFrequentListening": false,
      "isListening": false,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        2,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
  },
}
`;

exports[`NVM conversion tests ctrlr_backup_700_7.16.bin 1`] = `
Object {
  "controller": Object {
    "applicationData": "0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "applicationVersion": "7.16.2",
    "commandClasses": Object {
      "includedInsecurely": Array [],
      "includedSecurelyInsecureCCs": Array [],
      "includedSecurelySecureCCs": Array [],
    },
    "controllerConfiguration": 255,
    "dcdcConfig": null,
    "format": 3,
    "homeId": "0xdbf13d9e",
    "lastNodeId": 0,
    "lastNodeIdLR": null,
    "maxNodeId": 28,
    "maxNodeIdLR": null,
    "nodeId": 1,
    "primaryLongRangeChannelId": null,
    "protocolVersion": "7.16.2",
    "reservedId": 60,
    "reservedIdLR": null,
    "rfConfig": Object {
      "enablePTI": 0,
      "maxTXPower": 14,
      "measured0dBm": 3.3,
      "rfRegion": 1,
      "txPower": 0,
    },
    "staticControllerNodeId": 1,
    "sucAwarenessPushNeeded": 0,
    "sucLastIndex": 0,
    "sucUpdateEntries": Array [
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 1,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [
          94,
          85,
          152,
          159,
          108,
          38,
          112,
          133,
          89,
          142,
          134,
          114,
          90,
          115,
          117,
          34,
          122,
          91,
          135,
          96,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 2,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [
          94,
          85,
          152,
          159,
          108,
          38,
          112,
          133,
          89,
          142,
          134,
          114,
          90,
          115,
          117,
          34,
          122,
          91,
          135,
          96,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 3,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 4,
        "supportedCCs": Array [
          94,
          85,
          152,
          159,
          108,
          38,
          112,
          133,
          89,
          142,
          134,
          114,
          90,
          115,
          117,
          34,
          122,
          91,
          135,
          96,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 5,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 5,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 6,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 6,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 7,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 7,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 8,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 8,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 9,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 10,
        "supportedCCs": Array [
          94,
          85,
          152,
          159,
          108,
          38,
          112,
          133,
          89,
          142,
          134,
          114,
          90,
          115,
          117,
          34,
          122,
          91,
          135,
          96,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 10,
        "supportedCCs": Array [
          94,
          85,
          152,
          159,
          108,
          38,
          112,
          133,
          89,
          142,
          134,
          114,
          90,
          115,
          117,
          34,
          122,
          91,
          135,
          96,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 11,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 11,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 11,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 12,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 12,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 13,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 13,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 13,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 12,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 9,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 14,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 14,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 15,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 15,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 16,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 16,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 17,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 17,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 18,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 18,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 15,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 16,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 17,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 19,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 19,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 19,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 20,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 20,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 21,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 21,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 2,
        "controlledCCs": Array [],
        "nodeId": 20,
        "supportedCCs": Array [],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 22,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 22,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          50,
          91,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 23,
        "supportedCCs": Array [
          152,
          114,
          134,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 24,
        "supportedCCs": Array [
          94,
          133,
          89,
          128,
          112,
          90,
          122,
          135,
          114,
          142,
          113,
          115,
          152,
          159,
          121,
          108,
          85,
          134,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 24,
        "supportedCCs": Array [
          94,
          133,
          89,
          128,
          112,
          90,
          122,
          135,
          114,
          142,
          113,
          115,
          152,
          159,
          121,
          108,
          85,
          134,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 25,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 25,
        "supportedCCs": Array [
          94,
          112,
          133,
          89,
          85,
          134,
          114,
          90,
          115,
          152,
          159,
          37,
          108,
          117,
          34,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 26,
        "supportedCCs": Array [
          94,
          86,
          134,
          114,
          90,
          133,
          89,
          115,
          37,
          39,
          112,
          44,
          43,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 26,
        "supportedCCs": Array [
          94,
          86,
          134,
          114,
          90,
          133,
          89,
          115,
          37,
          39,
          112,
          44,
          43,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 27,
        "supportedCCs": Array [
          94,
          37,
          133,
          142,
          89,
          85,
          134,
          114,
          90,
          115,
          112,
          113,
          50,
          159,
          96,
          108,
          122,
        ],
      },
      Object {
        "changeType": 1,
        "controlledCCs": Array [],
        "nodeId": 28,
        "supportedCCs": Array [
          94,
          86,
          134,
          114,
          90,
          133,
          89,
          115,
          37,
          39,
          112,
          44,
          43,
          122,
        ],
      },
    ],
    "systemState": 0,
  },
  "nodes": Object {
    "1": Object {
      "appRouteLock": false,
      "genericDeviceClass": 2,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": null,
      "neighbors": Array [
        4,
        14,
        21,
        22,
        23,
        24,
        26,
        27,
        28,
      ],
      "nlwr": null,
      "nodeType": 0,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 2,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "10": Object {
      "appRouteLock": false,
      "genericDeviceClass": 17,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
        "repeaterNodeIDs": Array [
          4,
          24,
        ],
      },
      "neighbors": Array [
        14,
        22,
        23,
        24,
        25,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 0,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "14": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        4,
        10,
        21,
        23,
        24,
        25,
        27,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "21": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
      },
      "neighbors": Array [
        1,
        4,
        14,
        22,
        23,
        24,
        26,
        27,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "22": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
        "repeaterNodeIDs": Array [
          28,
        ],
      },
      "neighbors": Array [
        1,
        4,
        10,
        21,
        23,
        24,
        26,
        27,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "23": Object {
      "appRouteLock": false,
      "genericDeviceClass": 64,
      "isFrequentListening": "1000ms",
      "isListening": false,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "neighbors": Array [
        1,
        4,
        10,
        14,
        21,
        22,
        24,
        26,
        27,
      ],
      "nlwr": Object {
        "beaming": "1000ms",
        "protocolRate": 2,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 3,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "24": Object {
      "appRouteLock": false,
      "genericDeviceClass": 3,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
      },
      "neighbors": Array [
        1,
        4,
        10,
        14,
        21,
        22,
        23,
        26,
        27,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "25": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
        "repeaterNodeIDs": Array [
          22,
          10,
        ],
      },
      "neighbors": Array [
        1,
        10,
        14,
        22,
        26,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 2,
        "repeaterNodeIDs": Array [
          14,
        ],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "26": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 2,
        "repeaterNodeIDs": Array [
          10,
        ],
      },
      "neighbors": Array [
        1,
        4,
        21,
        22,
        23,
        24,
        25,
        27,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 2,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "27": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        4,
        14,
        21,
        22,
        23,
        24,
        26,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 3,
        "repeaterNodeIDs": Array [
          24,
        ],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 4,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "28": Object {
      "appRouteLock": false,
      "genericDeviceClass": 16,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        4,
        10,
        14,
        21,
        22,
        25,
        26,
        27,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 0,
        "repeaterNodeIDs": Array [],
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 1,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
    "4": Object {
      "appRouteLock": false,
      "genericDeviceClass": 17,
      "isFrequentListening": false,
      "isListening": true,
      "isRouting": true,
      "isVirtual": false,
      "lwr": Object {
        "beaming": false,
        "protocolRate": 3,
      },
      "neighbors": Array [
        1,
        14,
        21,
        22,
        23,
        24,
        26,
        27,
        28,
      ],
      "nlwr": Object {
        "beaming": false,
        "protocolRate": 2,
      },
      "nodeType": 1,
      "optionalFunctionality": true,
      "pendingDiscovery": false,
      "protocolVersion": 3,
      "routeSlaveSUC": false,
      "specificDeviceClass": 0,
      "sucPendingUpdate": false,
      "sucUpdateIndex": 254,
      "supportedDataRates": Array [
        40000,
        100000,
      ],
      "supportsBeaming": true,
      "supportsSecurity": false,
    },
  },
}
`;
